2000-05-17  Michael Natterer  <mitch@gimp.org>

	* app/plug_in.c: be a bit more verbose in the "Plug-In crashed"
	message: Warn the user that Gimp's internal state may be messed
	up and that the safe way is to restart Gimp.
	Unified all plug-in error messages.

	* libgimp/gimp.c: also changed to messages that the Gimp is using
	a newer/older wire protocol than the plug-in.

2000-05-17  Sven Neumann  <sven@gimp.org>

	* app/layers_dialog.c: corrected the usage of the 
	"invalidate_preview" signal. Now simpler and more
	robust. Should fix bug #11248.

Tue May 16 20:26:13 CEST 2000  Stanislav Brabec  <utx@penguin.cz>

	* gimp/plug-ins/gap/gap_mov_dialog.c,
	plug-ins/gdyntext/gdyntext.c,
	plug-ins/script-fu/scripts/camo.scm: Typo fixes.
	On request of Martin Weber <martweb@gmx.net>:
	* plug-ins/bmp/bmpread.c: Cosmetical fixed (german->english,
	added ';').

2000-05-16  Michael Natterer  <mitch@gimp.org>

	* app/commands.c
	* app/layers_dialog.c
	* app/resize.c: set the scale/resize dialog insensitive before
	scaling/resizing to keep users from pressing "OK" again.
	Fixes #10656.

Mon May 15 22:48:17 PDT 2000 Manish Singh <yosh@gimp.org>

	* Made 1.1.22 release (1.2pre)

2000-05-16  Tor Lillqvist  <tml@iki.fi>

	* libgimp/gimpenv.c (gimp_path_parse)
	* app/gimprc.c (transform_path): Don't try to handle tilde (~) at
	all on Windows. The tilde is used when mangling long file names
	into 8.3 form, and some people have a HOME environment variable
	that contains this kind of 8.3 path with a tilde. This causes
	interesting effects if we expand a tilde in some gimprc variable
	with $HOME, which contains a tilde, which we expand with $HOME,
	etc.

2000-05-14  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/common/gpb.c (gih_save_dialog): Fix typo introduced
	when gimp_spin_button_new() was taken into use. Now you can adjust
	the cell height again.

2000-05-14  Michael Natterer  <mitch@gimp.org>

	After a weekend of extensive mail exchange with the signal crew,